# ImFrame

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml
Docs/: Changelog.md
Examples/Features/: CMakeLists.txt  GLDemo.cpp  GLDemo.h  Internal.h  Main.cpp  MainApp.cpp  MainApp.h  SetBgColor.cpp  SetBgColor.h  SetUiFont.cpp  SetUiFont.h
Examples/Minimal/: CMakeLists.txt  Internal.h  Main.cpp  MainApp.cpp  MainApp.h
Include/: ImFrame.h
Source/: ImFrame.cpp  ImFrame.h  ImFrameInternal.h  ImfGLDemo.cpp  ImfGLDemo.h  ImfInternal.h  ImfUtilities.cpp  ImfUtilities.h
Source/Fonts/: CarlitoRegular.h  OpenSansRegular.h  OpenSansSemiBold.h  RobotoMedium.h  RobotoRegular.h
Source/ImGui/: imgui_impl_glfw.cpp
Source/Linux/: LinuxUtilities.cpp
Source/WinPC/: WinPCUtilities.cpp
Source/macOS/: macOSUtilities.mm
Tests/Feature/: Feature.cpp
Tests/Features/: GLDemo.cpp  Main.cpp  MainApp.cpp  MainApp.h
